tests/codegen/fail/union/struct_no_fields.rs
use juniper::GraphQLUnion;

#[derive(GraphQLUnion)]
struct Character;

fn main() {}
